--- a/changed.html
+++ b/changed.html
@@ -1,10 +1,9 @@
----
-- name: fixed page
-  hosts: g3
-  become: yes
-  tasks:
-   - name: updating page
-     copy:
-       src: unchanged.html
-       dest: /var/www/html/fixed.html
-...
+<html>
+    <body>
+        <center>
+            <h1>Operating System : {{ ansible_distribution }} </h1>
+            <br>
+            <h2>Hostname : {{ ansible_hostnmame }} </h2>
+        </center>
+    </body>
+</html>
